# EMNIST-font-generator

./: .gitignore  README.md  pyproject.toml
app/: run.py
ef_generator/: callbacks.py  emnist_data_module.py  model.py  visualization.py
notebooks/: exploration.ipynb
tests/: test_cnn.py
