[tool.poetry]
name = "ef_generator"
version = "0.1.0"
description = "Using GenAI to create a font based on EMNIST"
authors = ["aygalic <aygalic@hotmail.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.2"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.2"
seaborn = "^0.13.2"
torch = "^2.5.0"
datasets = "^3.0.1"
pytorch-lightning = "^2.4.0"
torchvision = "^0.20.0"
pdbpp = "^0.10.3"
tensorboard = "^2.18.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
